--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,5 @@
-name = "REPLACE_PKG"
-uuid = "a50c839e-1b84-4575-b48f-4fda80ec5e07"
+name = "MultiVariateHyperGraph"
+uuid = "2204289b-c645-4450-9785-a9318f14ef1f"
 authors = ["Patrick Armstrong <patrick.armstrong@anu.edu.au> and contributors"]
 version = "0.1.0"
 
